--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ hr {
 /* Navbar */
 
 .navbar-brand img {
-    background-color: #6d6d6d;
+    /* background-color: #6d6d6d; */
 }
 
 .nav-link {
@@ -119,7 +119,7 @@ footer p {
 }
 
 #intro-section .row div img {
-    height: 400px;
+    height: 425px;
 }
 
 /* Tagline Section */
