--- a/index.css
+++ b/index.css
@@ -118,7 +118,7 @@ footer p {
     height: 425px;
 }
 
-@media screen and (max-width: 1200px) {
+@media (max-width: 1200px) {
     #intro-text-col {
         padding: 5%;
         width: 100%;
@@ -136,7 +136,35 @@ footer p {
     }
 
 }
-@media screen and (min-width: 1200px) {
+
+@media (min-width: 560px) and (max-width: 1200px) {
+    #intro-text-col .text-sub {
+        width: 500px;
+        padding: 0;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 561px) {
+    #intro-text-col .text-sub {
+        width: 100%;
+        padding: 0 5%;
+    }
+}
+
+/* @media (min-width: 950px) and (max-width: 1199px) {
+    #intro-text-col {
+        padding: 5% 25%;
+    }
+}
+
+@media (min-width: 680px) and (max-width: 825px) {
+    #intro-text-col {
+        padding: 5% 15%;
+    }
+} */
+
+@media (min-width: 1201px) {
     #intro-text-col {
         padding-left: 15%;
     }
@@ -204,7 +232,7 @@ footer p {
     font-size: 10px;
 }
 
-@media screen and (max-width: 640px) {
+@media (max-width: 640px) {
     #about-text-col {
         width: 100%;
         padding: 5%;
@@ -218,7 +246,7 @@ footer p {
         padding-right: 0%;
     }
 }
-@media screen and (min-width: 640px) {
+@media (min-width: 640px) {
     #about-text-col {
         padding-right: 15%;
     }
@@ -239,6 +267,10 @@ footer p {
     padding: 5% 0;
 }
 
+#share-section .row .col {
+    padding: 0 10%;
+}
+
 #share-title {
     text-align: center;
 }
@@ -247,23 +279,29 @@ footer p {
     margin: 0 auto;
 }
 
-#share-image-container {
-    margin: 5% 15%;
+@media (min-width: 900px) {
+    #share-image-container {
+        margin: 5% 15%;
+    }
+}
+
+@media (max-width: 899px) {
+    #share-image-container {
+        margin: 5% 0;
+    }
 }
 
 #share-image-container img {
-    width: calc(((100% - 15%) / 3) - 3px);
-    margin: 0 2.5%;
+    width: calc((90% / 3) - 3px);
 }
 
-@media screen and (max-width: 1200px) {
-    #share-subtext {
-        padding: 0 10%;
-    }
+#share-image-container > img:nth-child(2) {
+    margin: 0 5%;
 }
-@media screen and (min-width: 1200px) {
+
+@media (min-width: 600px) {
     #share-subtext {
-        width: 50%;
+        width: 505px;
     }
 }
 
@@ -300,40 +338,34 @@ footer p {
     margin: 5% 0;
 }
 
-@media screen and (max-width: 960px) {
+#stories-intro .text-main, #stories-share p {
+    width: 100%;
+    text-align: center;
+    margin: 0;
+}
+
+#stories-gallery {
+    margin: 0 auto;
+}
+
+@media (max-width: 529px) {
     #stories-intro, #stories-share {
-        width: 100%;
-        margin: 0 auto 30px auto;
-        padding: 0 5%;
+        margin: 0 15px 30px 15px;
     }
-
-    #stories-intro .text-main, #stories-share p {
-        width: 100%;
-        text-align: center;
-        margin: 0;
-    }
-
+    
     #stories-gallery {
-        width: 75%;
-        margin: 0 auto;
+        width: calc(100% - 30px);
     }
 }
 
-@media screen and (min-width: 960px) {
+@media (min-width: 530px) {
     #stories-intro, #stories-share {
-        width: 50%;
-        margin: 0 auto 50px auto;
+        width: 500px;
+        margin: 0 auto 30px auto;
     }
-
-    #stories-intro .text-main, #stories-share p {
-        width: 100%;
-        text-align: center;
-        margin: 0;
-    }
-
+    
     #stories-gallery {
         width: 75%;
-        margin: 0 auto;
     }
 }
 
@@ -343,7 +375,7 @@ footer p {
 
 #stories-gallery img {
     width: 100%;
-    padding: 5% 0;
+    padding: 10% 0;
 }
 
 #stories-gallery .col {
@@ -390,7 +422,7 @@ footer p {
     text-align: center;
 }
 
-@media screen and (max-width: 770px) {
+@media (max-width: 770px) {
     #about-mission-text-container,
     #about-story-text-container,
     #about-team-text-container {
@@ -425,7 +457,7 @@ footer p {
     margin: 5% auto;
 }
 
-@media screen and (max-width: 650px) {
+@media (max-width: 650px) {
     #contact-outer {
         padding: 5%;
     }
@@ -435,6 +467,18 @@ footer p {
     text-align: center;
 }
 
-#contact-outer .text-sub {
-    margin-bottom: 5%;
+@media (max-width: 399px) {
+    #contact-outer .text-sub {
+        text-align: center;
+        width: 100%;
+        margin: 0 auto 5% auto;
+    }
+}
+
+@media (min-width: 400px) {
+    #contact-outer .text-sub {
+        text-align: center;
+        width: 360px;
+        margin: 0 auto 5% auto;
+    }
 }
