--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,26 @@
+/* Jumbotron */
+
+#jumbotron .container {
+    padding: 40px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+#jumbotron .left {
+    display: flex;
+    align-items: center;
+}
+
+#jumbotron .right {
+    width: 40%;
+}
+
+#jumbotron img {
+    width: 100%;
+}
+
+/* Photo Highlights section */
+
 #photo-highlights .col:nth-child(1) {
     background-image: url(../images/test-a.jpeg);
 }
