--- a/css/common.css
+++ b/css/common.css
@@ -1,28 +1,83 @@
-/* Right Info section */
-.right-info {
+.clear {
+    clear: both;
+}
+
+/* Typography */
+
+.subtitle {
+    font-size: 38px;
+    font-weight: bold;
+    line-height: 130%;
+}
+
+.description {
+    font-size: 20px;
+    line-height: 175%;
+}
+
+/* Color Scheme */
+
+.text-color-primary {
+    color: blue;
+}
+
+.text-color-white {
+    color: white;
+}
+
+.bg-color-primary {
     background-color: blue;
 }
 
-.right-info .container {
+.bg-color-secondary {
+    background-color: darkblue;
+}
+
+.bg-color-white {
+    background-color: white;
+}
+
+/* Info section */
+
+.info {
     padding: 100px 0;
 }
 
-.right-info .col:nth-child(1) {
-    width: 70%;
-    padding: 0;
+.info .container {
+    position: relative;
 }
 
-.right-info img {
-    width: 100%;
-}
-
-.right-info .col:nth-child(2) {
+.info .content {
     width: 50%;
+    height: 100%;
+    z-index: 1;
+    position: absolute;
+    display: flex;
+    align-items: center;
 }
 
-.right-info .info {
+.info .content > div {
     padding: 50px 75px;
-    background-color: white;
+}
+
+.info .content .subtitle {
+    margin-bottom: 5px;
+}
+
+.info img {
+    width: 70%;
+}
+
+/* Right Info section */
+
+.info.right .content {
+    right: 15px;
+}
+
+/* Left Info section */
+
+.info.left img {
+    float: right;
 }
 
 /* Photo Highlights section */
@@ -39,13 +94,4 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-}
-
-
-
-
-
-
-.clear {
-    clear: both;
 }
