--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,11 @@
+/* Jumbotron section */
+
+#jumbotron img {
+    padding-top: 25px;
+}
+
+/* Photo Highlights section */
+
 #photo-highlights .col:nth-child(1) {
     background-image: url(../images/test-c.jpeg);
 }
