[M3] Design latest flavors section

--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,65 @@
     width: 100%;
 }
 
+/* Latest Flavors section */
+
+#latest-flavors {
+    position: relative;
+}
+
+#latest-flavors .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+    padding: 150px 0;
+}
+
+#latest-flavors .container > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+#latest-flavors .icons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 225px;
+}
+
+#latest-flavors .icons img:nth-child(2),
+#latest-flavors .icons img:nth-child(3) {
+    height: 64px;
+}
+
+#latest-flavors .icons img {
+    width: 64px;
+}
+
+#latest-flavors .subtitle {
+    margin: 5px 0;
+}
+
+#latest-flavors > img {
+    width: 350px;
+    position: absolute;
+    bottom: 0;
+    z-index: 0;
+}
+
+#latest-flavors img.left {
+    left: 0;
+}
+
+#latest-flavors img.right {
+    right: 0;
+}
+
 /* Photo Highlights section */
 
 #photo-highlights .col:nth-child(1) {
