--- a/css/common.css
+++ b/css/common.css
@@ -2,6 +2,14 @@
     clear: both;
 }
 
+.button {
+    width: 200px;
+    height: 50px;
+    background-color: red;
+    border-radius: 10px;
+    margin-top: 25px;
+}
+
 /* Typography */
 
 .title {
