--- a/css/common.css
+++ b/css/common.css
@@ -152,3 +152,10 @@
     background-position: center center;
     background-size: cover;
 }
+
+/* Section Banner sections */
+
+.section-banner {
+    text-align: center;
+    padding: 30px 0;
+}
