--- a/css/common.css
+++ b/css/common.css
@@ -59,6 +59,28 @@
     background-color: white;
 }
 
+#footer input  {
+    border: white 2px solid;
+}
+
+#footer input:focus{
+    background-color: darkblue;
+    color: white;
+}
+
+#footer input::placeholder {
+    color: white;
+    opacity: 1;
+}
+
+#footer input:-ms-input-placeholder {
+    color: white;
+}
+
+#footer input::-ms-input-placeholder {
+    color: white;
+}
+
 /* Navbar */
 
 #navbar .container {
@@ -158,4 +180,51 @@
 .section-banner {
     text-align: center;
     padding: 30px 0;
+}
+
+/* Footer */
+
+#footer {
+    padding: 30px 0
+}
+
+#footer > .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+#footer .links {
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+}
+
+#footer .links div:first-child {
+    margin-right: 90px;
+}
+
+#footer .input {
+    text-align: center;
+}
+
+#footer .input > .description {
+    padding-bottom: 5px;
+}
+
+#footer .social-media {
+    display: flex;
+    align-items: center;
+}
+
+#footer .social-media a {
+    border: 2px white solid;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    text-align: center;
+    padding: 2px 0;
+}
+
+#footer .social-media a:not(:last-child) { 
+    margin-right: 30px;
 }
