--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,12 @@
     right: 0;
 }
 
+/* Right Info section */
+
+.info.right .button {
+    width: 180px;
+}
+
 /* Merch section */
 
 #merch {
@@ -111,6 +117,10 @@
     bottom: 0;
     right: 0;
     z-index: 0;
+}
+
+#merch .button {
+    width: 180px;
 }
 
 /* Photo Highlights section */
