--- a/css/common.css
+++ b/css/common.css
@@ -12,6 +12,18 @@
     
     font-size: 20px;
     font-weight: 600;
+    
+    display:block;
+    
+    transition: 0.3s all;
+}
+
+.button:hover{
+    text-decoration: none;
+}
+
+.button:active{
+    text-decoration: none;
 }
 
 /* Typography */
@@ -59,7 +71,6 @@
     color: #828282;
 }
 
-
 #footer input:-ms-input-placeholder {
     color: #828282;
 }
@@ -92,6 +103,26 @@
     z-index: 10;
     position: relative;
     box-shadow: 0 4px 50px 0 rgba(0, 0, 0, 0.15);
+}
+
+#footer .social-media a:hover,
+.button:hover {
+    background-color: #828282;
+}
+
+#footer .input button:active, 
+#footer .social-media a:hover > i,
+#footer .social-media a:active,
+.button:hover,
+.button:active {
+    color: white;
+}
+
+#footer .input button:active,
+#footer .social-media a:active,
+.button:active {
+    border-color: #676767;
+    background-color: #676767;
 }
 
 /* Navbar */
@@ -238,6 +269,11 @@
     font-size: 14px;
 }
 
+#footer .input button:active{
+    text-decoration: none;
+}
+
+
 #footer .social-media {
     display: flex;
     align-items: center;
@@ -255,4 +291,14 @@
 
 #footer .social-media a:not(:last-child) { 
     margin-right: 25px;
+}
+
+
+#footer .social-media a:hover{
+    text-decoration: none;
+    transition: 0.3s all;
+}
+
+#footer .social-media a:active{
+    text-decoration: none;
 }
