--- a/css/common.css
+++ b/css/common.css
@@ -67,7 +67,8 @@
 #contact-form .form-control:focus,
 #footer input:focus,
 #footer input::placeholder,
-.button {
+.button,
+.underline:hover {
     color: #828282;
 }
 
@@ -106,7 +107,8 @@
 }
 
 #footer .social-media a:hover,
-.button:hover {
+.button:hover,
+.underline:after {
     background-color: #828282;
 }
 
@@ -123,6 +125,45 @@
 .button:active {
     border-color: #676767;
     background-color: #676767;
+}
+
+.underline:active:after {
+    background-color: #676767;
+}
+
+#footer .links a:active,
+#navbar .links a:active {
+    color:#676767;
+}
+
+/* Underline */
+
+.underline {
+    position: relative;
+}
+.underline:after {
+    content: "";
+    position: absolute;
+    right: 0;
+    width: 0;
+    bottom: -5px;
+    height: 2px;
+    transition-property: width;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
+    border-radius: 2px;
+}
+
+.underline:hover {
+    text-decoration: none;
+}
+
+.underline:hover:after,
+.underline:focus:after,
+.underline:active:after {
+    left: 0;
+    right: auto;
+    width: 100%;
 }
 
 /* Navbar */
