--- a/css/common.css
+++ b/css/common.css
@@ -357,3 +357,9 @@
 #footer .social-media a:active{
     text-decoration: none;
 }
+
+@media (min-width: 768px) and (max-width: 991px) {
+    #footer .links div:first-child {
+        margin-right: 30px;
+    }
+}
