--- a/css/common.css
+++ b/css/common.css
@@ -277,6 +277,32 @@
     padding: 30px 0;
 }
 
+.section-banner br {
+    display: none;        
+}
+
+@media (max-width: 450px) {
+    .section-banner br {
+        display: inline-block;
+    }
+}
+@media (min-width: 300px) and (max-width: 350px) {
+    .section-banner br {
+        display: inline-block;
+    }
+    .section-banner .title {
+        font-size: 16px;
+    }
+}
+@media (min-width: 351px) and (max-width: 450px) {
+    .section-banner br {
+        display: inline-block;
+    }
+    .section-banner .title {
+        font-size: 16px;
+    }
+}
+
 /* Footer */
 
 #footer {
