--- a/css/contact.css
+++ b/css/contact.css
@@ -43,6 +43,40 @@
     margin-bottom: 0.25rem;
 }
 
+@media (max-width: 992px) and (min-width: 577px){
+    #contact-form .inner { 
+        width: 80%;
+        padding: 75px;
+    }
+}
+
+@media (max-width: 576px) {
+    #contact-form .inner { 
+        width: 90%;
+        padding: 50px 35px;
+    }
+}
+
+@media (max-width: 320px) {
+    #contact-form label,
+    #contact-form input,
+    #contact-form select,
+    #contact-form textarea {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 355px){
+    #contact-form .title {
+        font-size: 24px;
+    }
+    
+    #contact-form .description {
+        font-size: 16px;
+        margin: 10px auto 0 auto;
+    }
+}
+
 /* Photo Highlights section */
 
 #photo-highlights .col:nth-child(1) {
