--- a/css/common.css
+++ b/css/common.css
@@ -242,6 +242,66 @@
     width: 70%;
 }
 
+@media (max-width: 992px) and (min-width: 768px) {
+    .info .title {
+        font-size: 20px;
+    }
+    
+    .info .description {
+        margin-top: 5px;
+        font-size: 16px;
+    }
+    
+    .info .button { 
+        margin-top: 15px;
+        font-size: 16px;
+    }
+    
+    .info .content > div {
+        padding: 24px 35px;
+    }
+}
+
+@media (max-width: 767px) {
+    .info .container {
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .info .content {
+        margin: -100px auto 0 auto;
+        width: 80%;
+        height: 100%;
+        position: relative;
+        left: 0;
+        right: 0;
+    }
+    .description {
+        font-size: 16px;
+        margin-top: 5px;
+    }
+    .info img {
+        width: 100%;
+    }
+}
+
+@media (max-width: 550px) {
+    .info .content > div {
+        padding: 25px 30px;
+    }
+    .info .content {
+        margin: -50px auto 0 auto;
+        width: 90%;
+    }
+}
+
+@media (max-width: 350px) { 
+    .info .content {
+        margin: 25px auto 0 auto;
+        width: 100%;
+    }
+}
+
 /* Right Info section */
 
 .info.right .content {
